# GameHive

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  prepare_docker_build.sh
ChessCore/: CMakeLists.txt
ChessCore-exe/: CMakeLists.txt
ChessCore-exe/drivers/: CMakeLists.txt  ZobristDebugger.cpp  ZobristKeyGenerationDriver.cpp
ChessCore-exe/test/: CMakeLists.txt
ChessCore-exe/test/functional_test/: BoardStateFunctionalTest.cpp  CMakeLists.txt
ChessCore-exe/test/unit_test/: BoardStateTest.cpp  CMakeLists.txt  ColorTest.cpp  EvaluationHelperTest.cpp  FENTest.cpp  PieceTest.cpp  SquareTest.cpp  VectorTest.cpp
ChessCore/incl/: ChessCore.h
ChessCore/incl/ChessCore/: BoardState.h  BoardStateRecord.h  Color.h  FEN.h  Move.h  Piece.h  Square.h  Types.h  Vector.h  Zobrist.h
ChessCore/src/: BoardState.cpp  BoardStateRecord.cpp  DataManagement.cpp  FEN.cpp  Move.cpp  MoveGeneration.cpp  MoveMaking.cpp  MoveSeeking.cpp  MoveValidation.cpp  Piece.cpp  Square.cpp  Stalemate.cpp  Vector.cpp
ChessEngine/: CMakeLists.txt
ChessEngine-bindings/javascript/: CMakeLists.txt  build.sh  buildfortest.sh  buildforweb.sh
ChessEngine-bindings/javascript/src/: ChessEngineJS.cpp
ChessEngine-bindings/javascript/test/: ChessEngineJS.test.js  package.json
ChessEngine-bindings/python/: CMakeLists.txt  install.sh  setup.py
ChessEngine-bindings/python/src/: ChessEnginePython.cpp
ChessEngine-bindings/python/test/: FEN.py
ChessEngine-exe/: .gitignore  CMakeLists.txt
ChessEngine-exe/ChessEngine/: CMakeLists.txt
ChessEngine-exe/ChessEngine/incl/: EngineBoardState.h
ChessEngine-exe/ChessEngine/src/: Evaluation.cpp  Weights.cpp
ChessEngine-exe/drivers/: CMakeLists.txt  EngineDepthDriver.cpp  EngineTimeDriver.cpp  PerftCustomDriver.cpp  WeightOptimizationDriver.cpp
ChessEngine-exe/drivers/incl/: WeightEvaluationEngine.h
ChessEngine-exe/drivers/src/: WeightEvaluationEngine.cpp
ChessEngine-exe/incl/: ChessEngine.h  PerftEngine.h  Weights.h
ChessEngine-exe/src/: BoardUpdating.cpp  ChessEngine.cpp  EngineBoardState.cpp  MoveComputing.cpp  PerftEngine.cpp
ChessEngine-exe/test/: CMakeLists.txt
ChessEngine-exe/test/perft_test/: CMakeLists.txt  PerftInitialPosition.cpp  PerftPosition2.cpp  PerftPosition3.cpp  PerftPosition4.cpp  PerftPosition5.cpp  PerftPosition6.cpp  PerftPromotions.cpp
ChessEngine-exe/test/unit_test/: CMakeLists.txt  EvaluationTest.cpp
ChessEngine/incl/: ChessEngine.h  TranspositionTable.h  Weights.h
ChessEngine/src/: BoardUpdating.cpp  ChessEngine.cpp  Evaluation.cpp  MoveComputing.cpp  TranspositionTable.cpp  Weights.cpp
GameHive/: CMakeLists.txt  config.xlaunch
GameHive-web/: Dockerfile  package-lock.json  package.json
GameHive-web/app/: layout.tsx  page.tsx
GameHive-web/app/leaderboards/: page.tsx
GameHive-web/app/lib/: ChessEngineJS.js  board-state.ts  chess-engine-messages.ts  chess-engine-worker.ts  chess-engine.ts  chess-utils.ts  game-result.ts  move.ts  piece.ts  promotions.ts  square.ts  time-control.ts
GameHive-web/app/play/: page.tsx
GameHive-web/app/play/chess/: page.tsx
GameHive-web/app/play/chess/game/: page.tsx
GameHive-web/app/ui/: dropdown.tsx  hrule.tsx  nav-bar.tsx  timer.tsx
GameHive-web/app/ui/chess/: chess-settings-form.tsx
GameHive-web/app/ui/chess/game/: chess-board.tsx  chess-move-history.tsx  chess-page.tsx  chess-player-info.tsx  chess-sidebar.tsx  chess-square.tsx  empty-chess-board.tsx  promotion-menu.tsx
GameHive/GameSuite/src/: CMakeLists.txt  GameSuiteWindow.cpp  GameSuiteWindow.h  main.cpp
GameHive/GameSuite/src/Chess/: ChessBoardWidget.h  ChessEngineManager.h  ChessPromotionSelectionSquareWidget.h  ChessSquareWidget.cpp  ChessSquareWidget.h
GameHive/GameSuite/src/CommonWidgets/: ClockWidget.cpp
GameHive/GameSuite/src/Dialogs/: AboutDialog.cpp  AboutDialog.h
GameHive/GameSuite/src/Pages/: ChessGamePage.cpp  ChessSetupPage.h  ChooseGamePage.cpp
GameSuite/: resources.qrc
GameSuite/GameSuite/src/Chess/: ChessBoardWidget.cpp  ChessEngineManager.cpp  ChessPromotionSelectionSquareWidget.cpp  ChessPromotionSelectionWidget.cpp  ChessPromotionSelectionWidget.h
GameSuite/GameSuite/src/CommonWidgets/: ClockWidget.h
GameSuite/GameSuite/src/Dialogs/: ChessStyleDialog.cpp  ChessStyleDialog.h
GameSuite/GameSuite/src/Pages/: ChessGamePage.h  ChessSetupPage.cpp  ChooseGamePage.h
