add_executable(ColorTest ColorTest.cpp)
add_executable(PieceTest PieceTest.cpp)
add_executable(FENTest FENTest.cpp)
add_executable(SquareTest SquareTest.cpp)
add_executable(BoardStateTest BoardStateTest.cpp)
add_executable(VectorTest VectorTest.cpp)
add_executable(EvaluationHelperTest EvaluationHelperTest.cpp)

find_package(Catch2 3 REQUIRED)
target_link_libraries(ColorTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(PieceTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(FENTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(SquareTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(BoardStateTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(VectorTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)
target_link_libraries(EvaluationHelperTest PRIVATE ${PROJECT_NAME} Catch2::Catch2WithMain)

add_test(NAME ColorTest COMMAND ColorTest)
add_test(NAME PieceTest COMMAND PieceTest)
add_test(NAME FENTest COMMAND FENTest)
add_test(NAME SquareTest COMMAND SquareTest)
add_test(NAME BoardStateTest COMMAND BoardStateTest)
add_test(NAME VectorTest COMMAND VectorTest)
add_test(NAME EvaluationHelperTest COMMAND EvaluationHelperTest)